\driver_pdf_object_last:

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -213,6 +213,14 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\driver_pdf_object_last:}
+%   Much like the annotation version.
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_object_last:
+  { { driver.obj \int_use:N \g_@@_pdf_object_int } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Annotations}
 %
 % In \texttt{dvips}, annotations have to be constructed manually. As such,
@@ -1496,6 +1504,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\driver_pdf_object_last:}
+%   Much like annotation.
+%    \begin{macrocode}
+\cs_new:Npx \driver_pdf_object_last:
+  {
+    \exp_not:N \tex_the:D 
+    \cs_if_exist:NTF \tex_pdffeedback:D
+      { \exp_not:N \tex_pdffeedback:D lastobj }
+      { \exp_not:N \tex_pdflastobj:D }
+      0 ~ R
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
@@ -1713,6 +1735,13 @@
       {#2}
   }
 \cs_generate_variant:Nn \driver_pdf_object_now:nn { nx }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\driver_pdf_object_last:}
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_object_last:
+ { @driver.obj \int_use:N \g_@@_pdf_object_int }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1958,6 +1987,7 @@
 % \begin{macro}[EXP]{\driver_pdf_object_ref:n}
 % \begin{macro}{\driver_pdf_object_write:nn, , \driver_pdf_object_write:nx}
 % \begin{macro}{\driver_pdf_object_now:nn, , \driver_pdf_object_now:nx}
+% \begin{macro}{\driver_pdf_object_last:}
 %   All no-ops here.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_object_new:nn #1#2 { }
@@ -1966,6 +1996,7 @@
 \cs_new_protected:Npn \driver_pdf_object_write:nx #1#2 { }
 \cs_new_protected:Npn \driver_pdf_object_now:nn #1#2 { }
 \cs_new_protected:Npn \driver_pdf_object_now:nx #1#2 { }
+\cs_new:Npn \driver_pdf_object_last: { }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
