Move driver/backend code to internal to parent module

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -448,7 +448,7 @@
 \cs_new_protected:Npn \color_parse:nN #1#2
   {
 %<*package>
-    \driver_color_pickup:N \l_@@_current_tl
+    \@@_backend_pickup:N \l_@@_current_tl
     \tl_set_eq:cN { l_@@_named_ . _tl } \l_@@_current_tl
 %</package>
     \exp_args:Ne \@@_parse:nN { \tl_to_str:n {#1} } #2
