--- a/l3experimental/l3draw/l3draw-softpath.dtx
+++ b/l3experimental/l3draw/l3draw-softpath.dtx
@@ -221,24 +221,24 @@
 %   round point, hence being quark-like.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_softpath_close_op:nn #1#2
-  { \driver_draw_closepath: }
+  { \@@_backend_closepath: }
 \cs_new_protected:Npn \@@_softpath_curveto_opi:nn #1#2 
   { \@@_softpath_curveto_opi:nnNnnNnn {#1} {#2} }
 \cs_new_protected:Npn \@@_softpath_curveto_opi:nnNnnNnn #1#2#3#4#5#6#7#8
-  { \driver_draw_curveto:nnnnnn {#1} {#2} {#4} {#5} {#7} {#8} }
+  { \@@_backend_curveto:nnnnnn {#1} {#2} {#4} {#5} {#7} {#8} }
 \cs_new_protected:Npn \@@_softpath_curveto_opii:nn #1#2
   { \@@_softpath_curveto_opii:nn }
 \cs_new_protected:Npn \@@_softpath_curveto_opiii:nn #1#2
   { \@@_softpath_curveto_opiii:nn }
 \cs_new_protected:Npn \@@_softpath_lineto_op:nn #1#2
-  { \driver_draw_lineto:nn {#1} {#2} }
+  { \@@_backend_lineto:nn {#1} {#2} }
 \cs_new_protected:Npn \@@_softpath_moveto_op:nn #1#2
-  { \driver_draw_moveto:nn {#1} {#2} }
+  { \@@_backend_moveto:nn {#1} {#2} }
 \cs_new_protected:Npn \@@_softpath_roundpoint_op:nn #1#2 { }
 \cs_new_protected:Npn \@@_softpath_rectangle_opi:nn #1#2 
   { \@@_softpath_rectangle_opi:nnNnn {#1} {#2} }
 \cs_new_protected:Npn \@@_softpath_rectangle_opi:nnNnn #1#2#3#4#5
-  { \driver_draw_rectangle:nnnn {#1} {#2} {#4} {#5} }
+  { \@@_backend_rectangle:nnnn {#1} {#2} {#4} {#5} }
   \cs_new_protected:Npn \@@_softpath_rectangle_opii:nn #1#2 { }
 %    \end{macrocode}
 % \end{macro}
