--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1796,7 +1796,7 @@
         \tex_kern:D -\l_@@_left_new_dim
         \hbox:n
           {
-            \driver_box_use_rotate:Nn
+            \@@_backend_rotate:Nn
               \l_@@_internal_box
               \l_@@_angle_fp
           }
@@ -2224,7 +2224,7 @@
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \driver_box_use_scale:Nnn
+        \@@_backend_scale:Nnn
           #1
           \l_@@_scale_x_fp
           \l_@@_scale_y_fp
