--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -891,11 +891,11 @@
     \@@_softpath_use:
     \bool_if:NT \l_@@_path_use_clip_bool
       {
-        \driver_draw_clip:
+        \@@_backend_clip:
         \bool_lazy_or:nnF
           { \l_@@_path_use_fill_bool }
           { \l_@@_path_use_stroke_bool }
-          { \driver_draw_discardpath: }
+          { \@@_backend_discardpath: }
       }
     \bool_lazy_or:nnT
       { \l_@@_path_use_fill_bool }
@@ -903,7 +903,7 @@
       {
         \use:c
           {
-            driver_draw_
+            @@_backend_
             \bool_if:NT \l_@@_path_use_fill_bool { fill }
             \bool_if:NT \l_@@_path_use_stroke_bool { stroke }
             :
