--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -140,7 +140,7 @@
 \cs_new_protected:Npn \color_ensure_current:
   {
 %<*package>
-    \driver_color_pickup:N \l_@@_current_tl
+    \@@_backend_pickup:N \l_@@_current_tl
 %</package>
     \@@_select:V \l_@@_current_tl
   }
@@ -161,13 +161,13 @@
 \cs_new_protected:Npn \@@_select:w #1 ~ #2 \q_stop
   { \use:c { @@_select_ #1 :w } #2 \q_stop }
 \cs_new_protected:Npn \@@_select_cmyk:w #1 ~ #2 ~ #3 ~ #4 \q_stop
-  { \driver_color_cmyk:nnnn {#1} {#2} {#3} {#4} }
+  { \@@_backend_cmyk:nnnn {#1} {#2} {#3} {#4} }
 \cs_new_protected:Npn \@@_select_gray:w #1 \q_stop
-  { \driver_color_gray:n {#1} }
+  { \@@_backend_gray:n {#1} }
 \cs_new_protected:Npn \@@_select_rgb:w #1 ~ #2 ~ #3 \q_stop
-  { \driver_color_rgb:nnn {#1} {#2} {#3} }
+  { \@@_backend_rgb:nnn {#1} {#2} {#3} }
 \cs_new_protected:Npn \@@_select_spot:w #1 ~ #2 \q_stop
-  { \driver_color_spot:nn {#1} {#2} }
+  { \@@_backend_spot:nn {#1} {#2} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
