--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -990,6 +990,17 @@
 %   is removed.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2019-06-02]{\use_ii_i:nn}
+%   \begin{syntax}
+%     \cs{use_ii_i:nnn} \Arg{arg_1} \Arg{arg_2}
+%   \end{syntax}
+%   This function absorbs two arguments and leaves the content of the
+%   second and first in the input stream. The category code of
+%   these tokens is also fixed (if it has not already been by
+%   some other absorption). A single expansion is needed for the
+%   function to take effect.
+% \end{function}
+%
 % \begin{function}[EXP]
 %   {
 %     \use_none:n         ,
@@ -1596,6 +1607,13 @@
 \cs_set:Npn \use_iv:nnnn  #1#2#3#4 {#4}
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{macro}[EXP]{\use_ii_i:nn}
+%    \begin{macrocode}
+\cs_set:Npn \use_ii_i:nn #1#2 { #2 #1 }
+%    \end{macrocode}
+% \end{macro}
+%
 %
 % \begin{macro}[EXP]
 %   {
