--- a/l3kernel/l3str-convert.dtx
+++ b/l3kernel/l3str-convert.dtx
@@ -11,7 +11,7 @@
 %
 %    https://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3experimental bundle" (The Work in LPPL)
+% This file is part of the "l3kernel bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
@@ -22,12 +22,8 @@
 %
 % for those people who are interested.
 %
-%<*driver|package>
-\RequirePackage{expl3}
-%</driver|package>
 %<*driver>
-\documentclass[full]{l3doc}
-\usepackage{amsmath}
+\documentclass[full,kernel]{l3doc}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -52,7 +48,6 @@
 %
 % \maketitle
 %
-% \newcommand{\hexnum}[1]{\text{\texttt{\char`\"}#1}}
 % \begin{documentation}
 %
 % \section{Encoding and escaping schemes}
@@ -238,7 +233,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3str} implementation}
+% \section{\pkg{l3str-convert} implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
@@ -248,22 +243,7 @@
 %<@@=str>
 %    \end{macrocode}
 %
-%    \begin{macrocode}
-\ProvidesExplPackage{l3str-convert}{2019-05-28}{}
-  {L3 Experimental string encoding conversions}
-%    \end{macrocode}
-%
 % \subsection{Helpers}
-%
-% \subsubsection{A function unrelated to strings}
-%
-% \begin{macro}[EXP]{\use_ii_i:nn}
-%   A function used to swap its arguments.
-%    \begin{macrocode}
-\cs_if_exist:NF \use_ii_i:nn
-  { \cs_new:Npn \use_ii_i:nn #1#2 { #2 #1 } }
-%    \end{macrocode}
-% \end{macro}
 %
 % \subsubsection{Variables and constants}
 %
