Support for BDC/EMC

--- a/l3kernel/l3backend-pdf.dtx
+++ b/l3kernel/l3backend-pdf.dtx
@@ -1231,6 +1231,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Marked content}
+%
+% \begin{macro}{\@@_backend_bdc:nn}
+% \begin{macro}{\@@_backend_emc:}
+%   Simple wrappers.
+%   \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_bdc:nn #1#2
+  { \@@_backend_pdfmark:n { /#1 ~ #2 /BDC } }
+\cs_new_protected:Npn \@@_backend_emc:
+  { \@@_backend_pdfmark:n { /EMC } }
+%   \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</dvips>
 %    \end{macrocode}
@@ -1619,6 +1633,21 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Marked content}
+%
+% \begin{macro}{\@@_backend_bdc:nn}
+% \begin{macro}{\@@_backend_emc:}
+%   Simple wrappers. May need refinement: see
+%   \url{https://chat.stackexchange.com/transcript/message/49970158#49970158}.
+%   \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_bdc:nn #1#2
+  { \__kernel_backend_literal_page:n { /#1 ~ #2 ~ BDC } }
+\cs_new_protected:Npn \@@_backend_emc:
+  { \__kernel_backend_literal_page:n { EMC } }
+%   \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</pdfmode>
 %    \end{macrocode}
@@ -1967,6 +1996,21 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsubsection{Marked content}
+%
+% \begin{macro}{\@@_backend_bdc:nn}
+% \begin{macro}{\@@_backend_emc:}
+%   Simple wrappers. May need refinement: see
+%   \url{https://chat.stackexchange.com/transcript/message/49970158#49970158}.
+%   \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_bdc:nn #1#2
+  { \__kernel_backend_literal_page:n { /#1 ~ #2 ~ BDC } }
+\cs_new_protected:Npn \@@_backend_emc:
+  { \__kernel_backend_literal_page:n { EMC } }
+%   \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</dvipdfmx|xdvipdfmx>
 %    \end{macrocode}
@@ -2037,6 +2081,16 @@
 \cs_new:Npn \@@_backend_version_major: { -1 }
 \cs_new:Npn \@@_backend_version_minor: { -1 }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_bdc:nn}
+% \begin{macro}{\@@_backend_emc:}
+%   More no-ops.
+%   \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_bdc:nn #1#2 { }
+\cs_new_protected:Npn \@@_backend_emc: { }
+%   \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
