--- a/l3trial/l3pdf/l3pdf.dtx
+++ b/l3trial/l3pdf/l3pdf.dtx
@@ -233,11 +233,11 @@
   { \@@_backend_object_new:nn {#1} {#2} }
 \cs_new_protected:Npn \pdf_object_write:nn #1#2
   { \@@_backend_object_write:nn {#1} {#2} }
-\cs_generate_variant:Nn \pdf_object_write:nn { nx }\
+\cs_generate_variant:Nn \pdf_object_write:nn { nx }
 \cs_new:Npn \pdf_object_ref:n #1 { \@@_backend_object_ref:n {#1} }
 \cs_new_protected:Npn \pdf_object_now:nn #1#2
   { \@@_backend_object_now:nn {#1} {#2} }
-\cs_generate_variant:Nn \pdf_object_now:nn { nx }\
+\cs_generate_variant:Nn \pdf_object_now:nn { nx }
 \cs_new:Npn \pdf_object_last: { \@@_backend_object_last: }
 %    \end{macrocode}
 % \end{macro}
