Only need batchmode here

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -976,7 +976,8 @@
         {#1}
         { \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6} }
         { \c_@@_fatal_text_tl }
-      \tex_vbox:D { \tex_batchmode:D \tex_end:D }
+      \tex_batchmode:D
+      \tex_end:D
     }
 %    \end{macrocode}
 % \end{macro}
