typos [ci skip]

--- a/l3trial/l3pdf/l3pdf.dtx
+++ b/l3trial/l3pdf/l3pdf.dtx
@@ -87,7 +87,7 @@
 %     \item[\texttt{fstream}] Two brace groups: \meta{file name} and
 %       \meta{file content}
 %     \item[\texttt{stream}] Two brace groups: \meta{attributes (dictionary)}
-%       and \meta{steram contents}
+%       and \meta{stream contents}
 %   \end{itemize}
 % \end{function}
 %
@@ -102,9 +102,9 @@
 % \begin{function}[added = 2019-06-02]
 %   {\pdf_object_now:nn, \pdf_object_now:nx}
 %   \begin{syntax}
-%     \cs{pdf_object_write:nn} \Arg{type} \Arg{content}
+%     \cs{pdf_object_now:nn} \Arg{type} \Arg{content}
 %   \end{syntax}
-%   Writes the \meta{content} as content of an anonymous obect. Depending on the
+%   Writes the \meta{content} as content of an anonymous object. Depending on the
 %   \meta{type}, the format required for the \meta{data} will vary
 %   \begin{itemize}
 %     \item[\texttt{array}] A space-separated list of values
@@ -113,7 +113,7 @@
 %     \item[\texttt{fstream}] Two brace groups: \meta{file name} and
 %       \meta{file content}
 %     \item[\texttt{stream}] Two brace groups: \meta{attributes (dictionary)}
-%       and \meta{steram contents}
+%       and \meta{stream contents}
 %   \end{itemize}
 % \end{function}
 %
