--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -235,7 +235,7 @@
 % \begin{macro}{pdf.globaldict}
 %   A small global dictionary for backend use.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     true ~ setglobal ~
     /pdf.globaldict ~ 4 ~ dict ~ def ~
@@ -255,7 +255,7 @@
 %   is done here to allow for |Resolution|. The total height of a rectangle
 %   (an array) needs a little maths, in contrast to simply extracting a value.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.cvs { 65534 ~ string ~ cvs } def
     /pdf.dvi.pt { 72.27 ~ mul ~ Resolution ~ div } def
@@ -268,7 +268,7 @@
 % \begin{macro}{pdf.linkmargin, pdf.linkdp.pad, pdf.linkht.pad}
 %   Settings which are defined up-front in |SDict|.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.linkmargin { 1 ~ pdf.pt.dvi } def
     /pdf.linkdp.pad { 0 } def 
@@ -293,7 +293,7 @@
 %   border. We separate links for generic annotations to support adding a
 %   margin and setting a minimal size.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.rect
       { /Rect [ pdf.llx ~ pdf.lly ~ pdf.urx ~ pdf.ury ] } def
@@ -356,7 +356,7 @@
 %   can otherwise be out when using a landscape page. (Thanks to Alexander
 %   Grahn for the approach here.)
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.dest.anchor
       {
@@ -418,7 +418,7 @@
 %    the operation. Special effort is needed at the start and end of pages
 %    (or rather galleys), such that everything works properly.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.bordertracking ~ false ~ def
     /pdf.bordertracking.begin
@@ -576,7 +576,7 @@
 %   link area, done on the basis of a number of baselines. Finally, the end of
 %   the link area is tidied up, again from the boundary of the text area.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.breaklink
       {
@@ -701,7 +701,7 @@
 %   measured relative to the size of the baseline skip. If they are
 %   more than one apparent line high, breaking is applied.
 %    \begin{macrocode}
-\@@_postscript_header:n
+\__kernel_backend_postscript_header:n
   {
     /pdf.pdfmark
       {
