More work on the 'bailout' code (see #587)

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1000,20 +1000,7 @@
   \cs_new_protected:Npn \@@_fatal_exit:
     {
       \tex_batchmode:D
-      \tex_everycr:D   { }
-      \tex_everyhbox:D { }
-      \tex_everypar:D  { }
-      \tex_everyvbox:D { }
-      \tex_vbox:D 
-        {
-          \tex_halign:D
-            {
-              ## && ##
-              \tex_cr:D
-              \int_step_inline:nn { 300 } { \tex_span:D \tex_omit:D }
-              \tex_cr:D
-            }
-        }
+      \tex_read:D -1 to \l_@@_tmp_tl
     }
 %    \end{macrocode}
 % \end{macro}
