--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -509,10 +509,10 @@
 %<@@=msg>
 %    \end{macrocode}
 %
-% \begin{variable}{\l_@@_tmp_tl}
+% \begin{variable}{\l_@@_internal_tl}
 %   A general scratch for the module.
 %    \begin{macrocode}
-\tl_new:N \l_@@_tmp_tl
+\tl_new:N \l_@@_internal_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -747,13 +747,13 @@
             { ~ }
         }
         { } \@@_interrupt_text:n
-    \iow_wrap:nnnN { \l_@@_tmp_tl \\ \\ #2 } { } { }
+    \iow_wrap:nnnN { \l_@@_internal_tl \\ \\ #2 } { } { }
       \@@_interrupt:n
   }
 \cs_new_protected:Npn \@@_interrupt_text:n #1
   {
     \group_end:
-    \tl_set:Nn \l_@@_tmp_tl {#1}
+    \tl_set:Nn \l_@@_internal_tl {#1}
   }
 \cs_new_protected:Npn \@@_interrupt_more_text:n #1
   { \exp_args:Nx \tex_errhelp:D { #1 \iow_newline: } }
@@ -1000,7 +1000,7 @@
   \cs_new_protected:Npn \@@_fatal_exit:
     {
       \tex_batchmode:D
-      \tex_read:D -1 to \l_@@_tmp_tl
+      \tex_read:D -1 to \l_@@_internal_tl
     }
 %    \end{macrocode}
 % \end{macro}
@@ -1225,13 +1225,13 @@
     {
       \tl_if_empty:nF {#1}
         { \exp_args:No \iow_term:n { \use_none:n #1 } }
-      \tl_set:Nn \l_@@_tmp_tl {#2}
+      \tl_set:Nn \l_@@_internal_tl {#2}
       \__kernel_iow_with:Nnn \tex_newlinechar:D { 10 }
         {
           \__kernel_iow_with:Nnn \tex_errorcontextlines:D { -1 }
             {
               \tex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
-                { \exp_after:wN \l_@@_tmp_tl }
+                { \exp_after:wN \l_@@_internal_tl }
             }
         }
     }
