A few more backend changes

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -1890,7 +1890,7 @@
 %   Pass to \texttt{dvipdfmx}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_link_margin:n #1
-  { \@@_literal:x { dvipdfmx:config~g~ \dim_eval:n {#1} } }
+  { \__kernel_backend_literal:x { dvipdfmx:config~g~ \dim_eval:n {#1} } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1961,11 +1961,11 @@
 %   Pass data to the backend: these are a one-shot.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_compresslevel:n #1
-  { \@@_literal:x { dvipdfmx:config~z~ \int_eval:n {#1} } }
+  { \__kernel_backend_literal:x { dvipdfmx:config~z~ \int_eval:n {#1} } }
 \cs_new_protected:Npn \@@_backend_compress_objects:n #1
   {
     \bool_if:nF {#1}
-      { \@@_literal:n { dvipdfmx:config~C~0x40 } }
+      { \__kernel_backend_literal:n { dvipdfmx:config~C~0x40 } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1978,12 +1978,12 @@
 \cs_new_protected:Npn \@@_backend_version_major:n #1
   {
     \cs_gset:Npx \@@_backend_version_major: { \int_eval:n {#1} }
-    \@@_literal:x { pdf:majorversion \@@_backend_version_major: }
+    \__kernel_backend_literal:x { pdf:majorversion \@@_backend_version_major: }
   }
 \cs_new_protected:Npn \@@_backend_version_minor:n #1
   {
     \cs_gset:Npx \@@_backend_version_minor: { \int_eval:n {#1} }
-    \@@_literal:x { pdf:minorversion \@@_backend_version_minor: }
+    \__kernel_backend_literal:x { pdf:minorversion \@@_backend_version_minor: }
   }
 %    \end{macrocode}
 % \end{macro}
