--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -345,7 +345,7 @@
 \__kernel_msg_new:nnnn { hooks } { unknown-hook }
   { Unknown~hook~'#1/#2'. }
   {
-    LaTeX~has~been~asked~insert~a~hook~'#2'~for module~'#1'~
+    LaTeX~has~been~asked~insert~a~hook~'#2'~for~module~'#1'~
     but~this~name~has~not~been~defined.
   }
 %    \end{macrocode}
