--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -185,7 +185,7 @@
   {
     \seq_if_exist:cTF { g_@@_next_ #2 _ #3 _seq }
       {
-        \seq_gpush:cn { g_@@_ #1 _ #2 _ #3 _seq } {#4}
+        \seq_gput_right:cn { g_@@_ #1 _ #2 _ #3 _seq } {#4}
         \prop_gput:cnn { g_@@_ #1 _ #2 _ #3 _prop } {#4} {#5}
       }
       {
@@ -278,7 +278,7 @@
               {  document-hook-used } {#1} { add~to }
           }
           {
-            \seq_gpush:cn { g_@@_document_ #1 _seq } {#2}
+            \seq_gput_right:cn { g_@@_document_ #1 _seq } {#2}
             \prop_gput:cnn { g_@@_document_ #1 _prop } {#2} {#3}
           }
       }
