Separate hook desc like msg/keys

--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -178,9 +178,9 @@
 \cs_new_protected:Npn \hook_gadd_next:nnnn #1#2#3#4
   { \@@_gadd:nnnnn { next } {#1} {#2} {#3} {#4} }
 \cs_new_protected:Npn \hook_gadd_all:nnnnn #1#2#3#4#5
-  { \@@_gadd:nnnnn { all } {#1} {#2} { #3 - #4 } {#5} }
+  { \@@_gadd:nnnnn { all } {#1} {#2} { #3 / #4 } {#5} }
 \cs_new_protected:Npn \hook_gadd_next:nnnnn #1#2#3#4#5
-  { \@@_gadd:nnnnn { next } {#1} {#2} { #3 - #4 } {#5} }
+  { \@@_gadd:nnnnn { next } {#1} {#2} { #3 / #4 } {#5} }
 \cs_new_protected:Npn \@@_gadd:nnnnn #1#2#3#4#5
   {
     \seq_if_exist:cTF { g_@@_next_ #2 _ #3 _seq }
@@ -267,7 +267,7 @@
 \cs_new_protected:Npn \hook_document_gadd:nnn #1#2#3
   { \@@_document_gadd:nnn {#1} {#2} {#3} }
 \cs_new_protected:Npn \hook_document_gadd:nnnn #1#2#3#4
-  { \@@_document_gadd:nnn {#1} { #2 - #3 }  {#4} }
+  { \@@_document_gadd:nnn {#1} { #2 / #3 }  {#4} }
 \cs_new_protected:Npn \@@_document_gadd:nnn #1#2#3
   {
     \seq_if_exist:cTF { g_@@_document_ #1 _seq }
