Some docs [ci skip]

--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -60,6 +60,11 @@
 % sub-divided by the module \emph{providing} the hook. These hooks may have
 % content added just to the next use of the hook or to all future uses.
 %
+% Hook entries are created with name and attached code. The name will be
+% the module providing the code plus an optional description. In most cases,
+% the \enquote{user} module will be sufficient information, but where a module
+% uses the same hook repeatedly it will also need the description.
+%
 % \begin{function}[added = 2019-06-06]
 %   {\hook_new:nn}
 %   \begin{syntax}
